syntax = "proto3";

package user.service.v1;

option go_package = "github.com/kx-boutique/api/auth/service/v1;v1";

import "google/protobuf/empty.proto";
import "validate/validate.proto";

service Auth {
  rpc NewAuth (NewAuthReq) returns (NewAuthResp) {}
  rpc DeleteAuth (DeleteAuthReq) returns (DeleteAuthResp) {}
  rpc Login (LoginReq) returns (LoginResp) {}
  rpc Validate (google.protobuf.Empty) returns (ValidateResp) {}
}

message NewAuthReq {
  string userId = 1 [(validate.rules).string.uuid = true];
  string password = 2 [(validate.rules).string = {min_len: 5, max_len: 20}];
}

message NewAuthResp {
  string id = 1;
}

message DeleteAuthReq {
  string userId = 1 [(validate.rules).string.uuid = true];
}

message DeleteAuthResp {
  string id = 1;
}

message LoginReq {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string = {min_len: 5, max_len: 20}];
}

message LoginResp {
  string access_token = 1;
}

message ValidateResp {
  string user_id = 1;
  string email = 2;
}